quiz info + question now auto populate when logging in :)
