# apps/server/services/questions.js
@@ -1,11 +1,11 @@
 'use strict'
 var mongoose = require('./../modules/mongoose.js');
-
+var quizzes = require('./quizzes.js')
 /**
  * Get all Questions from the database
  *
  */
-exports.getAllQuestions = function(){
+exports.getAllQuestions = function () {
   return mongoose.Question.find({}).exec();
 };
 
@@ -13,9 +13,11 @@ exports.getAllQuestions = function(){
  * Get a specific question from the database
  * @param req, request object that contains the id of the requested question
  */
-exports.getQuestion = function(id){
-  return mongoose.Question.findOne({
+function getQuestion(id){
+return mongoose.Question.findOne({
     _id: id
   }).exec();
-};
+}
+exports.getQuestion = getQuestion;
+
 
